feat: add investment management functionality
- Introduced InvestmentController for handling investment-related API requests.
- Created InvestmentDto and Investment model to represent investment data.
- Implemented InvestmentService for business logic related to investments.
- Added InvestmentRepository for database interactions with investments.
- Developed AccountMovementDto to track account movements.
- Updated services and types to include investments and account movements.
- Created InvestmentsPage component for managing and displaying investments in the frontend.
- Enhanced transaction service to support fetching account movements.